--- a/core-web/libs/block-editor/src/lib/extensions/ai-image-prompt/components/ai-image-prompt-form/ai-image-prompt-form.component.scss
+++ b/core-web/libs/block-editor/src/lib/extensions/ai-image-prompt/components/ai-image-prompt-form/ai-image-prompt-form.component.scss
@@ -52,11 +52,7 @@ form {
 .ai-image-prompt__rewritten-label {
     display: flex;
     gap: $spacing-1;
-
-    i {
-        color: $color-palette-primary;
-        cursor: pointer;
-    }
+    align-items: center;
 }
 
 p-accordion {
