--- a/core-web/libs/ui/src/lib/components/dot-copy-button/dot-copy-button.component.html
+++ b/core-web/libs/ui/src/lib/components/dot-copy-button/dot-copy-button.component.html
@@ -1,12 +1,11 @@
 <button
-    class="p-button-sm p-button-text"
-    [pTooltip]="tooltipText"
+    [class]="$clazz()"
+    [label]="label()"
+    [pTooltip]="$tooltipText()"
     (click)="copyUrlToClipboard($event)"
-    hideDelay="800"
-    pButton
-    type="button"
     appendTo="body"
-    tooltipPosition="bottom">
-    <i class="pi pi-copy"></i>
-    <span class="p-button-label" *ngIf="!!label">{{ label }}</span>
-</button>
+    hideDelay="800"
+    icon="pi pi-copy"
+    pButton
+    tooltipPosition="bottom"
+    type="button"></button>
