chore(edit-page-2): implement compare versions (#28311)
* Working on compare contentlet versions

* Working on compare

* WIP Compare dialog

* WIP

* Finished implement compare contentlet versions dialog

* Fixing Circular dependency issue

* Removed commented code

* Fixed tests. From jasmine to jest

* cleanup

* Removed comments

* Removed unused style

* Added reload from dialog on shell

---------

Co-authored-by: KevinDavilaDotCMS <kfariid@gmail.com>

--- a/core-web/libs/dotcms-scss/angular/dotcms-theme/components/_dialog.scss
+++ b/core-web/libs/dotcms-scss/angular/dotcms-theme/components/_dialog.scss
@@ -106,3 +106,9 @@
     -webkit-backdrop-filter: blur($blur-md);
     backdrop-filter: blur($blur-md);
 }
+
+.p-dialog-mask.p-dialog-mask-transparent-nested.p-component-overlay {
+    background-color: transparent;
+    -webkit-backdrop-filter: none;
+    backdrop-filter: none;
+}
