--- a/core-web/libs/portlets/edit-ema/portlet/src/lib/dot-ema-shell/dot-ema-shell.component.html
+++ b/core-web/libs/portlets/edit-ema/portlet/src/lib/dot-ema-shell/dot-ema-shell.component.html
@@ -22,4 +22,5 @@
 <dot-edit-ema-dialog
     #dialog
     (action)="handleNgEvent($event)"
+    (reloadFromDialog)="reloadFromDialog()"
     data-testId="ema-dialog"></dot-edit-ema-dialog>
