--- a/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/edit-ema-editor.component.html
+++ b/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/edit-ema-editor.component.html
@@ -100,6 +100,7 @@
     <dot-edit-ema-dialog
         #dialog
         (action)="onCustomEvent($event)"
+        (reloadFromDialog)="reloadFromDialog()"
         data-testId="ema-dialog"></dot-edit-ema-dialog>
     <p-confirmDialog
         [style]="{
