--- a/core-web/libs/portlets/edit-ema/ui/src/lib/dot-content-compare/components/dot-content-compare-table/dot-content-compare-table.component.html
+++ b/core-web/libs/portlets/edit-ema/ui/src/lib/dot-content-compare/components/dot-content-compare-table/dot-content-compare-table.component.html
@@ -13,8 +13,7 @@
                         [options]="data.versions"
                         (onChange)="changeVersion.emit($event.value)"
                         data-testid="versions-dropdown"
-                        appendTo="body"
-                    >
+                        appendTo="body">
                         <ng-template let-selected pTemplate="selectedItem">
                             {{
                                 (selected.modDate | dotRelativeDate : 'MM/dd/yyyy - hh:mm aa') +
@@ -35,16 +34,14 @@
                         [(ngModel)]="showDiff"
                         [options]="displayOptions"
                         (onChange)="changeDiff.emit($event.value)"
-                        data-testid="show-diff"
-                    >
+                        data-testid="show-diff">
                     </p-selectButton>
                     <button
                         class="p-button-sm p-button"
                         [label]="'Bring-Back' | dm"
                         (click)="bringBack.emit(data.compare.inode)"
                         data-testId="table-bring-back"
-                        pButton
-                    ></button>
+                        pButton></button>
                 </div>
             </th>
         </tr>
@@ -59,16 +56,14 @@
                         *ngIf="data.working[field.variable]"
                         [alt]="data.working[field.variable]"
                         [src]="'/dA/' + data.working[field.variable] + '/20q'"
-                        data-testId="table-image-working"
-                    />
+                        data-testId="table-image-working" />
                 </td>
                 <td>
                     <img
                         *ngIf="data.compare[field.variable]"
                         [alt]="data.compare[field.variable]"
                         [src]="'/dA/' + data.compare[field.variable] + '/20q'"
-                        data-testId="table-image-compare"
-                    />
+                        data-testId="table-image-compare" />
                 </td>
             </ng-container>
             <ng-container *ngSwitchCase="'File'">
@@ -77,8 +72,7 @@
                         *ngIf="data.working[field.variable]"
                         [fileURL]="'/dA/' + data.working[field.variable] + '/fileAsset/'"
                         [label]="'/dA/' + data.working[field.variable] + '/fileAsset/'"
-                        data-testId="table-file-working"
-                    >
+                        data-testId="table-file-working">
                     </dot-content-compare-preview-field>
                 </td>
                 <td>
@@ -91,8 +85,7 @@
                                     : '/dA/' + data.compare[field.variable] + '/fileAsset/'
                                     : showDiff
                         "
-                        data-testId="table-file-compare"
-                    >
+                        data-testId="table-file-compare">
                     </dot-content-compare-preview-field>
                 </td>
             </ng-container>
@@ -102,8 +95,7 @@
                         *ngIf="data.working[field.variable + 'Version']"
                         [fileURL]="data.working[field.variable + 'Version']"
                         [label]="data.working[field.variable + 'Version']"
-                        data-testId="table-binary-working"
-                    >
+                        data-testId="table-binary-working">
                     </dot-content-compare-preview-field>
                 </td>
                 <td>
@@ -114,8 +106,7 @@
                             data.working[field.variable + 'Version']
                                 | dotDiff : data.compare[field.variable + 'Version'] : showDiff
                         "
-                        data-testId="table-binary-compare"
-                    >
+                        data-testId="table-binary-compare">
                     </dot-content-compare-preview-field>
                 </td>
             </ng-container>
@@ -123,46 +114,40 @@
             <ng-container *ngSwitchCase="'JSON-Field'">
                 <td
                     [innerHTML]="data.working[field.variable] | json"
-                    data-testId="table-json-working"
-                ></td>
+                    data-testId="table-json-working"></td>
                 <td
                     [innerHTML]="
                         data.working[field.variable]
                             | json
                             | dotDiff : (data.compare[field.variable] | json) : showDiff
                     "
-                    data-testId="table-json-compare"
-                ></td>
+                    data-testId="table-json-compare"></td>
             </ng-container>
             <ng-container *ngSwitchCase="'Story-Block'">
                 <td>
                     <dot-content-compare-block-editor
                         [field]="field.variable"
                         [data]="data"
-                        [showAsCompare]="false"
-                    ></dot-content-compare-block-editor>
+                        [showAsCompare]="false"></dot-content-compare-block-editor>
                 </td>
                 <td>
                     <dot-content-compare-block-editor
                         [showDiff]="showDiff"
                         [field]="field.variable"
                         [data]="data"
-                        [showAsCompare]="true"
-                    ></dot-content-compare-block-editor>
+                        [showAsCompare]="true"></dot-content-compare-block-editor>
                 </td>
             </ng-container>
             <ng-container *ngSwitchDefault>
                 <td
                     [innerHTML]="data.working[field.variable]"
-                    data-testId="table-field-working"
-                ></td>
+                    data-testId="table-field-working"></td>
                 <td
                     [innerHTML]="
                         data.working[field.variable]
                             | dotDiff : data.compare[field.variable] : showDiff
                     "
-                    data-testId="table-field-compare"
-                ></td>
+                    data-testId="table-field-compare"></td>
             </ng-container>
         </tr>
     </ng-template>
