--- a/core-web/libs/portlets/edit-ema/ui/src/lib/dot-content-compare/components/fields/dot-content-compare-preview-field/dot-content-compare-preview-field.component.html
+++ b/core-web/libs/portlets/edit-ema/ui/src/lib/dot-content-compare/components/fields/dot-content-compare-preview-field/dot-content-compare-preview-field.component.html
@@ -2,8 +2,7 @@
     *ngIf="!imageError; else fallback"
     [src]="fileURL"
     (error)="handleError()"
-    data-testId="image"
-/>
+    data-testId="image" />
 <ng-template #fallback>
     <span [innerHTML]="label" data-testId="label"></span>
     <a class="p-button p-button-outlined" [href]="fileURL" data-testId="button" download>
