--- a/core-web/libs/portlets/edit-ema/ui/src/lib/dot-content-compare/dot-content-compare.component.html
+++ b/core-web/libs/portlets/edit-ema/ui/src/lib/dot-content-compare/dot-content-compare.component.html
@@ -5,7 +5,6 @@
         [showDiff]="vm.showDiff"
         (changeDiff)="store.updateShowDiff($event)"
         (changeVersion)="store.updateCompare($event)"
-        (bringBack)="bringBack($event)"
-    >
+        (bringBack)="bringBack($event)">
     </dot-content-compare-table>
 </ng-container>
