refactor to not make function calls inside the HTML

--- a/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/components/ema-contentlet-tools/ema-contentlet-tools.component.html
+++ b/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/components/ema-contentlet-tools/ema-contentlet-tools.component.html
@@ -1,21 +1,17 @@
 <p-button
-    [ngStyle]="getTopButtonPosition()"
+    [ngStyle]="styles.topButton"
     (click)="setPositionFlag('before'); menu.toggle($event)"
     data-testId="add-top-button"
     icon="pi pi-plus"></p-button>
 <p-button
     *ngIf="!isContainerEmpty"
-    [ngStyle]="getBottomButtonPosition()"
+    [ngStyle]="styles.bottomButton"
     (click)="setPositionFlag('after'); menu.toggle($event)"
     data-testId="add-bottom-button"
     icon="pi pi-plus"></p-button>
 <p-menu #menu [model]="items" [popup]="true" appendTo="body" data-testId="menu-add"></p-menu>
 
-<div
-    class="actions"
-    *ngIf="!isContainerEmpty"
-    [ngStyle]="getActionPosition()"
-    data-testId="actions">
+<div class="actions" *ngIf="!isContainerEmpty" [ngStyle]="styles.actions" data-testId="actions">
     @if (contentletArea.payload.vtlFiles?.length) {
     <p-menu #menuVTL [model]="vtlFiles" [popup]="true" appendTo="body" />
     <p-button
@@ -51,7 +47,7 @@
         icon="pi pi-pencil" />
 </div>
 
-<div class="bounds" [ngStyle]="getPosition()" data-testId="bounds"></div>
+<div class="bounds" [ngStyle]="styles.bounds" data-testId="bounds"></div>
 <div class="drag-image" #dragImage *ngIf="contentletArea" data-testId="drag-image">
     {{ contentletArea.payload.contentlet.contentType }}
 </div>
