fix gray background in firefox

--- a/core-web/libs/portlets/edit-ema/portlet/src/lib/dot-ema-shell/dot-ema-shell.component.scss
+++ b/core-web/libs/portlets/edit-ema/portlet/src/lib/dot-ema-shell/dot-ema-shell.component.scss
@@ -5,6 +5,7 @@
     grid-template-columns: 1fr auto;
     grid-template-rows: 100%;
     height: 100%;
+    background-color: $white;
 
     router-outlet {
         display: none;
