--- a/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/edit-ema-editor.component.html
+++ b/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/edit-ema-editor.component.html
@@ -77,7 +77,7 @@
                         es.state === editorState.DRAGGING) ||
                     es.state === editorState.SCROLLING
                 "
-                [containers]="es.state === editorState.SCROLLING ? [] : es.bounds"
+                [containers]="es.bounds"
                 [dragItem]="es.dragItem"
                 data-testId="dropzone" />
         </div>
