Removed pointer on dropzone on scrolling

--- a/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/components/ema-page-dropzone/ema-page-dropzone.component.html
+++ b/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/components/ema-page-dropzone/ema-page-dropzone.component.html
@@ -22,7 +22,10 @@
             context: { error: container | dotError : dragItem, container: container }
         "></ng-container>
 </div>
+
+@if (containers.length > 0) {
 <div class="pointer" [ngStyle]="pointerPosition"></div>
+}
 
 <ng-template #errorTemplate let-error="error" let-container="container">
     <div
