--- a/core-web/libs/block-editor/src/lib/extensions/ai-content-prompt/ai-content-prompt.component.scss
+++ b/core-web/libs/block-editor/src/lib/extensions/ai-content-prompt/ai-content-prompt.component.scss
@@ -28,6 +28,18 @@ form {
     }
 }
 
+.ai-content__generated-text-wrapper {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+
+    dot-copy-button {
+        position: absolute;
+        right: $spacing-3;
+        bottom: $spacing-0;
+    }
+}
+
 .ai-content__generated-text,
 dot-empty-container {
     height: 22rem;
@@ -41,7 +53,7 @@ dot-empty-container {
 }
 
 .ai-content__input-text {
-    height: 4rem;
+    height: $spacing-8;
 }
 
 .ai-content__buttons {
