--- a/core-web/libs/block-editor/src/lib/extensions/ai-image-prompt/components/ai-image-prompt-form/ai-image-prompt-form.component.scss
+++ b/core-web/libs/block-editor/src/lib/extensions/ai-image-prompt/components/ai-image-prompt-form/ai-image-prompt-form.component.scss
@@ -45,6 +45,18 @@ form {
     }
 }
 
+.ai-image-prompt__text-wrapper {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+
+    dot-copy-button {
+        position: absolute;
+        right: $spacing-1;
+        bottom: $spacing-0;
+    }
+}
+
 .ai-image-prompt__orientation {
     margin-bottom: 9rem;
 }
@@ -52,11 +64,7 @@ form {
 .ai-image-prompt__rewritten-label {
     display: flex;
     gap: $spacing-1;
-
-    i {
-        color: $color-palette-primary;
-        cursor: pointer;
-    }
+    align-items: center;
 }
 
 p-accordion {
