Swapping display of Height/Width in UVE device selector
Dimensions should display as `{Width} x {Height}` instead of `{Height} x {Width}`; this just swaps them.

--- a/core-web/libs/portlets/edit-ema/ui/src/lib/dot-device-selector-seo/dot-device-selector-seo.component.html
+++ b/core-web/libs/portlets/edit-ema/ui/src/lib/dot-device-selector-seo/dot-device-selector-seo.component.html
@@ -32,8 +32,8 @@
                             <div class="device-list-item__content">
                                 <span class="device-list-item__name">{{ option.name }}</span>
                                 <span class="device-list-item__dimensions">
-                                    {{ option.cssHeight | number }} x
-                                    {{ option.cssWidth | number }}
+                                    {{ option.cssWidth | number }} x
+                                    {{ option.cssHeight | number }}
                                 </span>
                             </div>
                         </button>
@@ -49,8 +49,8 @@
                             <div class="device-list-item__content">
                                 <span class="device-list-item__name">{{ option.name }}</span>
                                 <span class="device-list-item__dimensions"
-                                    >{{ option.cssHeight | number }} x
-                                    {{ option.cssWidth | number }}</span
+                                    >{{ option.cssWidth | number }} x
+                                    {{ option.cssHeight | number }}</span
                                 >
                             </div>
                         </button>
