--- a/examples/angular/src/app/page/dotcms-pages/dotcms-pages.component.html
+++ b/examples/angular/src/app/page/dotcms-pages/dotcms-pages.component.html
@@ -1,3 +1,3 @@
 @if (context()?.page; as page) {
-<dotcms-layout [entity]="page" />
+<dotcms-layout [entity]="page" [components]="components()" />
 }
