--- a/examples/angular/src/app/pages/pages.component.html
+++ b/examples/angular/src/app/pages/pages.component.html
@@ -1,5 +1,5 @@
 @if (context()?.pageAsset; as pageAsset) {
-<div class="flex flex-col min-h-screen gap-6 bg-lime-50">
+<div class="flex flex-col min-h-screen gap-6 bg-neutral-50">
 
     @if(pageAsset.layout.header) {
         <app-header>
