--- a/core-web/libs/dotcms-scss/angular/dotcms-theme/components/buttons/common.scss
+++ b/core-web/libs/dotcms-scss/angular/dotcms-theme/components/buttons/common.scss
@@ -62,6 +62,23 @@
     }
 }
 
+#main-tertiary-severity {
+    background-color: $color-palette-primary-200;
+
+    &:hover {
+        background-color: $color-palette-primary-300;
+    }
+
+    &:active {
+        background-color: $color-palette-primary-400;
+    }
+
+    &:focus {
+        background-color: $color-palette-primary-200;
+        @include field-focus;
+    }
+}
+
 #outlined-primary-severity {
     background-color: transparent;
     border: $field-border-size solid $color-palette-primary;
@@ -119,6 +136,35 @@
     border: 1px solid $color-palette-secondary;
 }
 
+// outlined only apply to icon-only
+#outlined-tertiary-severity.p-button-icon-only {
+    border: $field-border-size solid $color-palette-primary-300;
+    white-space: nowrap;
+
+    .p-button-label,
+    .p-button-icon,
+    .pi {
+        color: $color-palette-primary;
+    }
+
+    &:hover {
+        background-color: $color-palette-primary-100;
+    }
+
+    &:active {
+        background-color: $color-palette-primary-200;
+    }
+
+    &:focus {
+        background-color: $white;
+        @include field-focus;
+    }
+}
+
+#outlined-tertiary-severity-sm {
+    border: 1px solid $color-palette-primary-300;
+}
+
 #text-primary-severity {
     background-color: transparent;
     color: $black;
@@ -158,7 +204,7 @@
     }
 
     .p-button-label {
-        color: inherit;
+        color: $color-palette-secondary;
     }
 
     .p-button-icon,
@@ -183,6 +229,45 @@
 
     &:focus {
         background-color: transparent;
+        @include field-focus;
+    }
+}
+
+// Apply for icon only and button
+#text-tertiary-severity {
+    background-color: $white;
+    color: $color-palette-primary-500;
+    overflow: hidden;
+    max-width: 100%;
+
+    .p-button-label {
+        color: $color-palette-primary-500;
+        @include truncate-text;
+    }
+
+    .p-button-icon,
+    .pi {
+        color: $color-palette-primary-500;
+    }
+
+    &.p-button-icon-only {
+        .p-button-icon,
+        .pi {
+            color: $color-palette-gray-800;
+        }
+    }
+
+    &:hover {
+        background-color: $white;
+    }
+
+    &:active {
+        background-color: $white;
+    }
+
+    &:focus {
+        background-color: $color-palette-primary-200;
+
         @include field-focus;
     }
 }
@@ -223,6 +308,14 @@
 
 #button-disabled-outlined {
     border: $field-border-size solid $color-palette-gray-300;
+    background-color: $color-palette-gray-200;
+
+    &.p-button-icon-only {
+        .p-button-icon,
+        .pi {
+            color: $color-palette-gray-500;
+        }
+    }
 }
 
 #button-disabled-text {
