--- a/core-web/libs/portlets/dot-languages/portlet/src/lib/dot-languages-list/dot-languages-list.component.html
+++ b/core-web/libs/portlets/dot-languages/portlet/src/lib/dot-languages-list/dot-languages-list.component.html
@@ -2,7 +2,11 @@
     <div class="languages-list__header">
         <span class="p-input-icon-right">
             <i class="pi pi-search"></i>
-            <input type="text" pInputText />
+            <input
+                class="languages-list__search"
+                (input)="dt.filterGlobal($event.target.value, 'contains')"
+                type="text"
+                pInputText />
         </span>
         <button
             [label]="'languages.add.locale' | dm"
@@ -10,11 +14,15 @@
             type="button"
             icon="pi pi-plus"></button>
     </div>
-    <p-table [value]="vm.languages" styleClass="dotTable">
+    <p-table
+        #dt
+        [value]="vm.languages"
+        [globalFilterFields]="['locale', 'language', 'country']"
+        styleClass="dotTable">
         <ng-template pTemplate="header">
             <tr>
-                <th scope="col" pSortableColumn="language">
-                    {{ 'languages.locale' | dm }} <p-sortIcon field="language"></p-sortIcon>
+                <th scope="col" pSortableColumn="locale">
+                    {{ 'languages.locale' | dm }} <p-sortIcon field="locale"></p-sortIcon>
                 </th>
                 <th scope="col" pSortableColumn="language">
                     {{ 'languages.language' | dm }} <p-sortIcon field="language"></p-sortIcon>
@@ -23,17 +31,23 @@
                     {{ 'languages.country' | dm }} <p-sortIcon field="country"></p-sortIcon>
                 </th>
                 <th scope="col">{{ 'languages.variables' | dm }}</th>
-                <th scope="col">{{ 'languages.menu' | dm }}</th>
+                <th scope="col" style="width: 40px">{{ 'languages.menu' | dm }}</th>
             </tr>
         </ng-template>
         <ng-template pTemplate="body" let-language>
             <tr>
-                <td>{{ language.language }} ({{ language.isoCode }})</td>
-                <td>{{ language.language }} - {{ language.languageCode }}</td>
-                <td>{{ language.country }} - {{ language.countryCode }}</td>
-                <td>id: {{ language.id }}</td>
+                <td [ngClass]="{ 'tag-padding': language.defaultLanguage }">
+                    {{ language.locale }}
+                    <p-tag
+                        class="sm p-tag-success"
+                        *ngIf="language.defaultLanguage"
+                        [value]="'Default' | dm" />
+                </td>
+                <td>{{ language.language }}</td>
+                <td>{{ language.country }}</td>
+                <td>{{ language.variables }}</td>
                 <td>
-                    <button pButton type="button" icon="pi pi-pencil"></button>
+                    <dot-action-menu-button [actions]="language.actions"></dot-action-menu-button>
                 </td>
             </tr>
         </ng-template>
